--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,15 @@ package-lock.json
 
 # production
 /build
+/.idea
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/.DS_Store
+/.env
+/.env.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
